<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.comoelagua.android.braille.ExercisesActivity">

    <TextView android:id="@+id/askLabel"
        android:text="@string/ask_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:textSize="24dp" />

    <TextView android:id="@+id/ask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="36dp"
        android:layout_row="1"
        android:layout_column="0" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="36dp"
        android:id="@+id/answer"
        android:layout_row="2"
        android:layout_column="0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next"
        android:text="@string/next"
        android:layout_row="3"
        android:layout_column="0"
        android:onClick="checkEquals" />

    <TextView android:id="@+id/askLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0" />
    <TextView android:id="@+id/answerLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0" />
    <TextView android:id="@+id/checkLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0" />

</GridLayout>
