...
            android:textColor="#000000"
            android:text="@string/okLabel"
            android:textSize="18dp"
            android:layout_margin="5dp"
            android:width="100dp"/>

        <TextView android:id="@+id/okValue"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/okLabel"
            android:textColor="#ffffff"
            android:textSize="18dp"
            android:layout_margin="5dp"
...
